--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -16,158 +16,157 @@
  */
 
 {
-"app_title": {"message": "search2"},
-"app_description": {"message": "定义属于你自己的搜索习惯！"},
-"com_typename_news":{"message":"新闻"},
-"com_typename_web":{"message":"网页"},
-"com_typename_picture":{"message":"图片"},
-"com_typename_video":{"message":"视频"},
-"com_typename_music":{"message":"音乐"},
-"com_typename_shopping":{"message":"购物"},
-"com_moresearch":{"message":"更多"},
-"com_close":{"message":"关闭"},
+ "app_title": {"message": "search2"}
+,"app_description": {"message": "实用可扩展的搜索助手"}
+,"com_typename_news":{"message":"新闻"}
+,"com_typename_web":{"message":"网页"}
+,"com_typename_picture":{"message":"图片"}
+,"com_typename_video":{"message":"视频"}
+,"com_typename_music":{"message":"音乐"}
+,"com_typename_shopping":{"message":"购物"}
+,"com_moresearch":{"message":"更多"}
+,"com_close":{"message":"关闭"}
 
-"cts_more_tip":{"message":"全部搜索条目"},
-"cts_config_tip":{"message":"打开配置选项"},
+,"cts_more_tip":{"message":"全部搜索条目"}
+,"cts_config_tip":{"message":"打开配置选项"}
 
-"more_title":{"message":"更多搜索"},
-"more_autoclose":{"message":"打开链接后自动关闭"},
-"more_newwindow":{"message":"在新窗口打开链接"},
-"more_remember":{"message":"记住当前设置"},
-"more_savesuccess":{"message":"保存成功！"},
+,"more_title":{"message":"更多搜索"}
+,"more_autoclose":{"message":"打开链接后自动关闭"}
+,"more_newwindow":{"message":"在新窗口打开链接"}
+,"more_remember":{"message":"记住当前设置"}
+,"more_savesuccess":{"message":"保存成功！"}
 
-"op_title":{"message":"选项配置"},
-"op_reset":{"message":"恢复默认"},
-"op_import":{"message":"导入"},
-"op_import_success":{"message":"导入配置成功！"},
-"op_import_failed":{"message":"导入文件格式不正确！"},
-"op_export":{"message":"导出"},
-"op_cancel":{"message":"取消"},
-"op_save":{"message":"保存"},
-"op_config":{"message":"全局功能设置"},
-"op_config_newwindow":{"message":"在新页面中打开链接"},
-"op_config_selected":{"message":"搜索当前选中的文字"},
-"op_config_cmenu":{"message":"开启右键搜索菜单"},
-"op_config_autohide":{"message":"自动隐藏搜索条"},
-"op_config_tiled":{"message":"平铺整个搜索条"},
-"op_config_cartoon":{"message":"开启飞碟动画特效"},
-"op_config_cartoon_rd":{"message":"动画效果随机"},
-"op_config_right_indentdistance":{"message":"搜索条居右时向右缩进(5~50)："},
-"op_config_percent":{"message":" %(百分比)"},
-"op_config_indentdistance":{"message":"搜索条首个链接的缩进(5~500)："},
-"op_config_intervaldistance":{"message":"搜索条每个条目的间距(5~200)："},
-"op_config_px":{"message":" 像素"},
-"op_config_pos":{"message":"搜索条位置："},
-"op_config_pos_left":{"message":"居左"},
-"op_config_pos_right":{"message":"居右/优化显示"},
-"op_config_pos_top":{"message":"顶端"},
-"op_config_pos_bottom":{"message":"底端"},
-"op_config_display":{"message":"搜索条显示："},
-"op_config_display_auto":{"message":"智能显示"},
-"op_config_display_onlytype":{"message":"仅类别"},
-"op_config_display_onlyicon":{"message":"仅图标"},
-"op_config_display_fullname":{"message":"全名"},
-"op_config_bgcolor":{"message":"搜索条背景颜色："},
-"op_config_fgcolor":{"message":"搜索条文字颜色："},
-"op_config_bdcolor":{"message":"搜索条边框颜色："},
-"op_config_borderline":{"message":"显示搜索条边框"},
-"op_search":{"message":"搜索引擎定义"},
-"op_search_addcm":{"message":"添加到右键"},
-"op_search_edit":{"message":"编辑"},
-"op_search_rm":{"message":"删除"},
-"op_search_on":{"message":"启用"},
-"op_search_off":{"message":"禁用"},
-"op_search_form_url":{"message":"地址定义："},
-"op_search_form_name":{"message":"搜索名称："},
-"op_search_form_icon":{"message":"图标定义："},
-"op_search_form_tf":{"message":"特殊识别语："},
-"op_search_form_prkw":{"message":"关键词前缀："},
-"op_search_form_googleico":{"message":"使用Google图标服务"},
-"op_search_form_enc":{"message":"语言编码："},
-"op_search_form_enc_default":{"message":"默认unicode(utf-8)"},
-"op_search_form_enc_gbk":{"message":"中文（简体）(gbk)"},
-"op_search_form_enc_gb18030":{"message":"中文（简体）(gb18030)"},
-"op_search_form_enc_big5":{"message":"中文（繁体）(big5)"},
-"op_search_form_enc_big5_hkscs":{"message":"中文（繁体）(big5-hkscs)"},
-"op_search_form_enc_utf_16le":{"message":"unicode(utf-16le)"},
-"op_search_form_enc_shift_jis":{"message":"日文(shift_jis)"},
-"op_search_form_enc_euc_jp":{"message":"日文(euc-jp)"},
-"op_search_form_enc_iso_2022_jp":{"message":"日文(ios-2022-jp)"},
-"op_search_form_enc_euc_kr":{"message":"韩语(euc-kr)"},
-"op_search_form_enc_iso_2022_kr":{"message":"韩语(ios-2022-kr)"},
-"op_search_form_enc_windows_1250":{"message":"中欧语言(windows-1250)"},
-"op_search_form_enc_windows_1251":{"message":"西里尔语(windows-1251)"},
-"op_search_form_enc_windows_1252":{"message":"希腊文(windows-1252)"},
-"op_search_form_enc_windows_1253":{"message":"中欧语言(windows-1253)"},
-"op_search_form_enc_windows_1254":{"message":"土耳其文(windows-1254)"},
-"op_search_form_enc_windows_1255":{"message":"希伯来文(windows-1255)"},
-"op_search_form_enc_windows_1256":{"message":"阿拉伯文(windows-1256)"},
-"op_search_form_enc_windows_1257":{"message":"波罗的海语(windows-1257)"},
-"op_search_form_enc_windows_1258":{"message":"越南文(windows-1258)"},
-"op_search_form_enc_iso_8859_1":{"message":"西欧语言(iso-8859-1)"},
-"op_search_form_enc_iso_8859_2":{"message":"中欧语言(iso-8859-2)"},
-"op_search_form_enc_iso_8859_3":{"message":"南欧语言(iso-8859-3)"},
-"op_search_form_enc_iso_8859_4":{"message":"波罗的海语(iso-8859-4)"},
-"op_search_form_enc_iso_8859_5":{"message":"西里尔语(iso-8859-5)"},
-"op_search_form_enc_iso_8859_6":{"message":"阿拉伯文(iso-8859-6)"},
-"op_search_form_enc_iso_8859_7":{"message":"希腊文(iso-8859-7)"},
-"op_search_form_enc_iso_8859_8":{"message":"西伯来文(iso-8859-8)"},
-"op_search_form_enc_iso_8859_8_i":{"message":"西伯来文(iso-8859-8-i)"},
-"op_search_form_enc_iso_8859_9":{"message":"土耳其文(iso-8859-9)"},
-"op_search_form_enc_iso_8859_10":{"message":"北欧语言(iso-8859-10)"},
-"op_search_form_enc_iso_8859_11":{"message":"泰文(iso-8859-11)"},
-"op_search_form_enc_iso_8859_13":{"message":"波罗的海语(iso-8859-13)"},
-"op_search_form_enc_iso_8859_14":{"message":"凯尔特语(iso-8859-14)"},
-"op_search_form_enc_iso_8859_15":{"message":"西欧语言(iso-8859-15)"},
-"op_search_form_enc_iso_8859_16":{"message":"罗马尼亚文(iso-8859-16)"},
-"op_search_form_enc_macintosh":{"message":"西欧语言(Macintosh)"},
-"op_search_form_enc_koi8_r":{"message":"西里尔语(koi8-r)"},
-"op_search_form_enc_koi8_u":{"message":"西里尔语(koi8-u)"},
-"op_search_form_pathkw":{"message":"使用目录作为关键词"},
-"op_search_tip1":{"message":"小提示：点击"},
-"op_search_tip2":{"message":"可以调整顺序，点击这里"},
-"op_search_add":{"message":"添加"},
-"op_search_cancel":{"message":"取消"},
-"op_search_confirm":{"message":"确定"},
-"op_search_tip3":{"message":"新的搜索引擎，或者"},
-"op_search_tip4":{"message":"编辑添加操作，双击标签可以重命名类别"},
-"op_tip_fom_url":{"message":"无效的URL地址！"},
-"op_tip_fom_name":{"message":"必需定义搜索引擎的名字！"},
-"op_tip_fom_icon":{"message":"无效的图标地址定义！"},
-"op_tip_fom_icon_timeout":{"message":"获取图标超时，请确认图标地址可以有效访问！"},
-"op_tip_fom_prkw":{"message":"无效的关键词前缀！"},
-"op_tip_fom_pathkw":{"message":"关键词前缀与使用目录作为关键词不匹配！"},
-"op_tip_save_success":{"message":"保存成功，配置在刷新后或新的页面生效！"},
-"op_tip_notallow":{"message":"不允许的操作，因为你正在编辑或添加一个搜索引擎！"},
-"op_mtip_pos_right":{"message":"当使用图片、购物搜索时，为了不影响用户体验，会临时强制居左显示"},
-"op_mtip_display_auto":{"message":"智能显示名称：当搜索条居左显示的时候为节省空间仅显示搜索类型，其它情况下则显示完整名称"},
-"op_mtip_right_indentdistance":{"message":"这个选项仅在搜索条居右时生效"},
-"op_mtip_intervaldistance":{"message":"当搜索条平铺时将忽略此项设置"},
-"op_mtip_cartoon":{"message":"在使用搜索条的“更多”功能时，你可以看到动画效果"},
-"op_mtip_cartoon_rd":{"message":"在使用搜索条的“更多”功能时，随机地制造一种动画效果"},
-"op_mtip_borderline":{"message":"适当运用边框衬托可以使搜索条更加美观"},
-"op_mtip_form_url":{"message":"文本关键词请用%s转义代替，右键图片地址请用%p转义代替"},
-"op_mtip_form_tf":{"message":"像Google一样的某些的搜索引擎，在网页、图片等不同的搜索类别，使用了相同的域名如www.google.com，他们在用URL参数来区分不同的搜索类别，这种情况下需要填写识别语，如&tbm=isch, &tbm=web等等"},
-"op_mtip_form_prkw":{"message":"关键词前缀顾名思义是指：%s左边那部分的参数名字，如q=；如果选择【使用目录作为关键词】，则此处应填写目录关键词路径前面的URL部分"},
-"op_mtip_form_enc":{"message":"仅用于某些不支持utf8编码的搜索引擎，你可以依次点击：【自定义设置菜单】>【工具】>【编码】查看搜索引擎使用的编码"},
-"op_mtip_form_googleico":{"message":"Google提供了一个在线的网站图标服务，如果你找不到搜索引擎的图标，可以使用这个服务，勾选此处会自动填写图标定义为：https://www.google.com/s2\n/favicons?domain=域名"},
-"op_mtip_form_pathkw":{"message":"这是一个为兼容极少数搜索引擎的特殊选项，因为这些搜索引擎并没有使用标准的URL参数传递关键词，而是采用了action的请求方式，如苏宁易购：https://search.suning.com/关键词/；勾选此外还应注意【关键词前缀】的定义方法"},
+,"op_title":{"message":"选项配置"}
+,"op_reset":{"message":"恢复默认"}
+,"op_import":{"message":"导入"}
+,"op_import_success":{"message":"导入配置成功！"}
+,"op_import_failed":{"message":"导入文件格式不正确！"}
+,"op_export":{"message":"导出"}
+,"op_cancel":{"message":"取消"}
+,"op_save":{"message":"保存"}
+,"op_config":{"message":"全局功能设置"}
+,"op_config_newwindow":{"message":"在新页面中打开链接"}
+,"op_config_selected":{"message":"搜索当前选中的文字"}
+,"op_config_cmenu":{"message":"开启右键搜索菜单"}
+,"op_config_autohide":{"message":"自动隐藏搜索条"}
+,"op_config_tiled":{"message":"平铺整个搜索条"}
+,"op_config_cartoon":{"message":"开启飞碟动画特效"}
+,"op_config_cartoon_rd":{"message":"动画效果随机"}
+,"op_config_right_indentdistance":{"message":"搜索条居右时向右缩进(5~50)："}
+,"op_config_percent":{"message":" %(百分比)"}
+,"op_config_indentdistance":{"message":"搜索条首个链接的缩进(5~500)："}
+,"op_config_intervaldistance":{"message":"搜索条每个条目的间距(5~200)："}
+,"op_config_px":{"message":" 像素"}
+,"op_config_pos":{"message":"搜索条位置："}
+,"op_config_pos_left":{"message":"居左"}
+,"op_config_pos_right":{"message":"居右/优化显示"}
+,"op_config_pos_top":{"message":"顶端"}
+,"op_config_pos_bottom":{"message":"底端"}
+,"op_config_display":{"message":"搜索条显示："}
+,"op_config_display_auto":{"message":"智能显示"}
+,"op_config_display_onlytype":{"message":"仅类别"}
+,"op_config_display_onlyicon":{"message":"仅图标"}
+,"op_config_display_fullname":{"message":"全名"}
+,"op_config_bgcolor":{"message":"搜索条背景颜色："}
+,"op_config_fgcolor":{"message":"搜索条文字颜色："}
+,"op_config_bdcolor":{"message":"搜索条边框颜色："}
+,"op_config_borderline":{"message":"显示搜索条边框"}
+,"op_search":{"message":"搜索引擎定义"}
+,"op_search_addcm":{"message":"添加到右键"}
+,"op_search_edit":{"message":"编辑"}
+,"op_search_rm":{"message":"删除"}
+,"op_search_on":{"message":"启用"}
+,"op_search_off":{"message":"禁用"}
+,"op_search_form_url":{"message":"地址定义："}
+,"op_search_form_name":{"message":"搜索名称："}
+,"op_search_form_icon":{"message":"图标定义："}
+,"op_search_form_tf":{"message":"特殊识别语："}
+,"op_search_form_prkw":{"message":"关键词前缀："}
+,"op_search_form_googleico":{"message":"使用Google图标服务"}
+,"op_search_form_enc":{"message":"语言编码："}
+,"op_search_form_enc_default":{"message":"默认unicode(utf-8)"}
+,"op_search_form_enc_gbk":{"message":"中文（简体）(gbk)"}
+,"op_search_form_enc_gb18030":{"message":"中文（简体）(gb18030)"}
+,"op_search_form_enc_big5":{"message":"中文（繁体）(big5)"}
+,"op_search_form_enc_big5_hkscs":{"message":"中文（繁体）(big5-hkscs)"}
+,"op_search_form_enc_utf_16le":{"message":"unicode(utf-16le)"}
+,"op_search_form_enc_shift_jis":{"message":"日文(shift_jis)"}
+,"op_search_form_enc_euc_jp":{"message":"日文(euc-jp)"}
+,"op_search_form_enc_iso_2022_jp":{"message":"日文(ios-2022-jp)"}
+,"op_search_form_enc_euc_kr":{"message":"韩语(euc-kr)"}
+,"op_search_form_enc_iso_2022_kr":{"message":"韩语(ios-2022-kr)"}
+,"op_search_form_enc_windows_1250":{"message":"中欧语言(windows-1250)"}
+,"op_search_form_enc_windows_1251":{"message":"西里尔语(windows-1251)"}
+,"op_search_form_enc_windows_1252":{"message":"希腊文(windows-1252)"}
+,"op_search_form_enc_windows_1253":{"message":"中欧语言(windows-1253)"}
+,"op_search_form_enc_windows_1254":{"message":"土耳其文(windows-1254)"}
+,"op_search_form_enc_windows_1255":{"message":"希伯来文(windows-1255)"}
+,"op_search_form_enc_windows_1256":{"message":"阿拉伯文(windows-1256)"}
+,"op_search_form_enc_windows_1257":{"message":"波罗的海语(windows-1257)"}
+,"op_search_form_enc_windows_1258":{"message":"越南文(windows-1258)"}
+,"op_search_form_enc_iso_8859_1":{"message":"西欧语言(iso-8859-1)"}
+,"op_search_form_enc_iso_8859_2":{"message":"中欧语言(iso-8859-2)"}
+,"op_search_form_enc_iso_8859_3":{"message":"南欧语言(iso-8859-3)"}
+,"op_search_form_enc_iso_8859_4":{"message":"波罗的海语(iso-8859-4)"}
+,"op_search_form_enc_iso_8859_5":{"message":"西里尔语(iso-8859-5)"}
+,"op_search_form_enc_iso_8859_6":{"message":"阿拉伯文(iso-8859-6)"}
+,"op_search_form_enc_iso_8859_7":{"message":"希腊文(iso-8859-7)"}
+,"op_search_form_enc_iso_8859_8":{"message":"西伯来文(iso-8859-8)"}
+,"op_search_form_enc_iso_8859_8_i":{"message":"西伯来文(iso-8859-8-i)"}
+,"op_search_form_enc_iso_8859_9":{"message":"土耳其文(iso-8859-9)"}
+,"op_search_form_enc_iso_8859_10":{"message":"北欧语言(iso-8859-10)"}
+,"op_search_form_enc_iso_8859_11":{"message":"泰文(iso-8859-11)"}
+,"op_search_form_enc_iso_8859_13":{"message":"波罗的海语(iso-8859-13)"}
+,"op_search_form_enc_iso_8859_14":{"message":"凯尔特语(iso-8859-14)"}
+,"op_search_form_enc_iso_8859_15":{"message":"西欧语言(iso-8859-15)"}
+,"op_search_form_enc_iso_8859_16":{"message":"罗马尼亚文(iso-8859-16)"}
+,"op_search_form_enc_macintosh":{"message":"西欧语言(Macintosh)"}
+,"op_search_form_enc_koi8_r":{"message":"西里尔语(koi8-r)"}
+,"op_search_form_enc_koi8_u":{"message":"西里尔语(koi8-u)"}
+,"op_search_form_pathkw":{"message":"使用目录作为关键词"}
+,"op_search_tip1":{"message":"小提示：点击"}
+,"op_search_tip2":{"message":"可以调整顺序，点击这里"}
+,"op_search_add":{"message":"添加"}
+,"op_search_cancel":{"message":"取消"}
+,"op_search_confirm":{"message":"确定"}
+,"op_search_tip3":{"message":"新的搜索引擎，或者"}
+,"op_search_tip4":{"message":"编辑添加操作，双击标签可以重命名类别"}
+,"op_tip_fom_url":{"message":"无效的URL地址！"}
+,"op_tip_fom_name":{"message":"必需定义搜索引擎的名字！"}
+,"op_tip_fom_icon":{"message":"无效的图标地址定义！"}
+,"op_tip_fom_icon_timeout":{"message":"获取图标超时，请确认图标地址可以有效访问！"}
+,"op_tip_fom_prkw":{"message":"无效的关键词前缀！"}
+,"op_tip_fom_pathkw":{"message":"关键词前缀与使用目录作为关键词不匹配！"}
+,"op_tip_save_success":{"message":"保存成功，配置在刷新后或新的页面生效！"}
+,"op_tip_notallow":{"message":"不允许的操作，因为你正在编辑或添加一个搜索引擎！"}
+,"op_mtip_pos_right":{"message":"当使用图片、购物搜索时，为了不影响用户体验，会临时强制居左显示"}
+,"op_mtip_display_auto":{"message":"智能显示名称：当搜索条居左显示的时候为节省空间仅显示搜索类型，其它情况下则显示完整名称"}
+,"op_mtip_right_indentdistance":{"message":"这个选项仅在搜索条居右时生效"}
+,"op_mtip_intervaldistance":{"message":"当搜索条平铺时将忽略此项设置"}
+,"op_mtip_cartoon":{"message":"在使用搜索条的“更多”功能时，你可以看到动画效果"}
+,"op_mtip_cartoon_rd":{"message":"在使用搜索条的“更多”功能时，随机地制造一种动画效果"}
+,"op_mtip_borderline":{"message":"适当运用边框衬托可以使搜索条更加美观"}
+,"op_mtip_form_url":{"message":"文本关键词请用%s转义代替，右键图片地址请用%p转义代替"}
+,"op_mtip_form_tf":{"message":"像Google一样的某些的搜索引擎，在网页、图片等不同的搜索类别，使用了相同的域名如www.google.com，他们在用URL参数来区分不同的搜索类别，这种情况下需要填写识别语，如&tbm=isch, &tbm=web等等"}
+,"op_mtip_form_prkw":{"message":"关键词前缀顾名思义是指：%s左边那部分的参数名字，如q=；如果选择【使用目录作为关键词】，则此处应填写目录关键词路径前面的URL部分"}
+,"op_mtip_form_enc":{"message":"仅用于某些不支持utf8编码的搜索引擎，你可以依次点击：【自定义设置菜单】>【工具】>【编码】查看搜索引擎使用的编码"}
+,"op_mtip_form_googleico":{"message":"Google提供了一个在线的网站图标服务，如果你找不到搜索引擎的图标，可以使用这个服务，勾选此处会自动填写图标定义为：https://www.google.com/s2\n/favicons?domain=域名"}
+,"op_mtip_form_pathkw":{"message":"这是一个为兼容极少数搜索引擎的特殊选项，因为这些搜索引擎并没有使用标准的URL参数传递关键词，而是采用了action的请求方式，如苏宁易购：https://search.suning.com/关键词/；勾选此外还应注意【关键词前缀】的定义方法"}
 
-"oth_readme":{"message":"关于我"},
-"oth_readme1":{"message":"search2的设计遵循四个原则，它们是：轻快、极简、易用、可扩展"},
-"oth_readme2":{"message":"search2没有引入任何第三方Javascript库，并只在用户指定的搜索引擎页面加载"},
-"oth_readme3":{"message":"search2的用户界面极其简单，只占用页面很小的位置，甚至可以将其靠边隐藏，尽量不干扰用户原本的web体验"},
-"oth_readme4":{"message":"search2同时也遵循Google信条：以用户为中心，充分考虑用户使用习惯；越快越好，响应快速，web体验再快也不为过；网络是公平、民主的，不捆绑任何搜索引擎，包括Google本身，所有搜索引擎是用户完全可自定义的"},
-"oth_readme5":{"message":"search2需要Chrome核心版本大于21才能正常使用"},
-"oth_readme6":{"message":"过去心不可得，现在心不可得，未来心不可得"},
-"oth_ipr1":{"message":"知识产权声明：search2的设置图标"},
-"oth_ipr2":{"message":"和更多图标"},
-"oth_ipr3":{"message":"归属Google公司所有，Google有权收回其使用权；search2的源代码产权归作者所有，任何个人或组织不可对其修改并再次发布在Chrome市场或基于Chrome核心的浏览器市场，作者保留追究其法律责任的权利"},
-"oth_reset_confirm":{"message":"你正在恢复默认配置，这将丢失你当前的所有配置，确定要重置？"},
-"oth_tab_untitled":{"message":"未命名"},
-"oth_tab_rm_confirm":{"message":"确定要移除这个搜索类别，包括这个类别下的所有搜索引擎项吗？"},
+,"oth_readme":{"message":"关于我"}
+,"oth_readme1":{"message":"search2的设计遵循四个原则，它们是：轻快、极简、易用、可扩展"}
+,"oth_readme2":{"message":"search2没有引入任何第三方javascript库，它只在用户定义过的搜索引擎页面加载"}
+,"oth_readme3":{"message":"search2的用户界面极其简单，只占用页面很小的位置，甚至可以将其靠边隐藏，尽量不干扰用户原本的web体验"}
+,"oth_readme4":{"message":"search2同时也遵循Google信条：a)以用户为中心，充分考虑用户使用习惯；b)越快越好，响应快速，web体验再快也不为过；c)网络是公平、民主的，不捆绑任何搜索引擎，包括Google本身，所有搜索引擎是用户完全可自定义的"}
+,"oth_readme5":{"message":"search2需要Chrome核心版本大于21才能正常使用, 从v2.0.0版本开始支持manifest v3"}
+,"oth_readme6":{"message":"过去心不可得，现在心不可得，未来心不可得"}
+,"oth_ipr1":{"message":"版权声明：search2的图标"}
+,"oth_ipr2":{"message":"和"}
+,"oth_ipr3":{"message":"源代码产权归作者(wurenny@gmail.com)所有，任何个人或组织不可对其盗用、修改、发布，包括但不限于Chrome扩展市场或其它浏览器插件市场，作者保留追究其法律责任的权利"}
+,"oth_reset_confirm":{"message":"你正在恢复默认配置，这将丢失你当前的所有配置，确定要重置？"}
+,"oth_tab_untitled":{"message":"未命名"}
+,"oth_tab_rm_confirm":{"message":"确定要移除这个搜索类别，包括这个类别下的所有搜索引擎项吗？"}
 
 
-
-"__________":{"message":"————————"}
+,"__________":{"message":"————————"}
 }
