--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -26,6 +26,7 @@
 ,"com_typename_web":{"message":"网页"}
 ,"com_typename_picture":{"message":"图片"}
 ,"com_typename_video":{"message":"视频"}
+,"com_typename_tv":{"message":"追剧"}
 ,"com_typename_music":{"message":"音乐"}
 ,"com_typename_shopping":{"message":"购物"}
 ,"com_moresearch":{"message":"更多"}
@@ -85,7 +86,7 @@
 ,"op_search_form_name":{"message":"搜索名称："}
 ,"op_search_form_icon":{"message":"图标定义："}
 ,"op_search_form_tf":{"message":"特殊识别语："}
-,"op_search_form_prkw":{"message":"关键词前缀："}
+,"op_search_form_prkw":{"message":"关键词标识："}
 ,"op_search_form_googleico":{"message":"使用Google图标服务"}
 ,"op_search_form_enc":{"message":"语言编码："}
 ,"op_search_form_enc_default":{"message":"默认unicode(utf-8)"}
@@ -139,8 +140,8 @@
 ,"op_tip_fom_name":{"message":"必需定义搜索引擎的名字！"}
 ,"op_tip_fom_icon":{"message":"无效的图标地址定义！"}
 ,"op_tip_fom_icon_timeout":{"message":"获取图标超时，请确认图标地址可以有效访问！"}
-,"op_tip_fom_prkw":{"message":"无效的关键词前缀！"}
-,"op_tip_fom_pathkw":{"message":"关键词前缀与使用目录作为关键词不匹配！"}
+,"op_tip_fom_prkw":{"message":"无效的关键词标识！"}
+,"op_tip_fom_pathkw":{"message":"关键词标识与使用目录作为关键词不匹配！"}
 ,"op_tip_save_success":{"message":"保存成功，配置在刷新后或新的页面生效！"}
 ,"op_tip_notallow":{"message":"不允许的操作，因为你正在编辑或添加一个搜索引擎！"}
 ,"op_mtip_pos_right":{"message":"当使用图片、购物搜索时，为了不影响用户体验，会临时强制居左显示"}
@@ -152,10 +153,10 @@
 ,"op_mtip_borderline":{"message":"适当运用边框衬托可以使搜索条更加美观"}
 ,"op_mtip_form_url":{"message":"文本关键词请用%s转义代替，右键图片地址请用%p转义代替"}
 ,"op_mtip_form_tf":{"message":"像Google一样的某些的搜索引擎，在网页、图片等不同的搜索类别，使用了相同的域名如www.google.com，他们在用URL参数来区分不同的搜索类别，这种情况下需要填写识别语，如&tbm=isch, &tbm=web等等"}
-,"op_mtip_form_prkw":{"message":"关键词前缀顾名思义是指：%s左边那部分的参数名字，如q=；如果选择【使用目录作为关键词】，则此处应填写目录关键词路径前面的URL部分"}
+,"op_mtip_form_prkw":{"message":"关键词标识顾名思义是指：%s左边那部分的参数名字，如q=；如果选择【使用目录作为关键词】，则此处应填写正则表达式"}
 ,"op_mtip_form_enc":{"message":"仅用于某些不支持utf8编码的搜索引擎，你可以依次点击：【自定义设置菜单】>【工具】>【编码】查看搜索引擎使用的编码"}
 ,"op_mtip_form_googleico":{"message":"Google提供了一个在线的网站图标服务，如果你找不到搜索引擎的图标，可以使用这个服务，勾选此处会自动填写图标定义为：https://www.google.com/s2\n/favicons?domain=域名"}
-,"op_mtip_form_pathkw":{"message":"这是一个为兼容极少数搜索引擎的特殊选项，因为这些搜索引擎并没有使用标准的URL参数传递关键词，而是采用了action的请求方式，如苏宁易购：https://search.suning.com/关键词/；勾选此外还应注意【关键词前缀】的定义方法"}
+,"op_mtip_form_pathkw":{"message":"这是一个为兼容极少数搜索引擎的特殊选项，因为这些搜索引擎并没有使用标准的URL参数传递关键词，而是采用了action的请求方式，如苏宁易购：https://search.suning.com/关键词/；勾选此外还应注意【关键词标识】的定义方法"}
 
 ,"oth_readme":{"message":"关于我"}
 ,"oth_readme1":{"message":"search2的设计遵循四个原则，它们是：轻快、极简、易用、可扩展"}
