--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -22,13 +22,14 @@
 
 ,"app_title": {"message": "search2"}
 ,"app_description": {"message": "实用可扩展的搜索助手"}
-,"com_typename_news":{"message":"新闻"}
 ,"com_typename_web":{"message":"网页"}
 ,"com_typename_picture":{"message":"图片"}
 ,"com_typename_video":{"message":"视频"}
 ,"com_typename_tv":{"message":"追剧"}
-,"com_typename_music":{"message":"音乐"}
 ,"com_typename_shopping":{"message":"购物"}
+,"com_typename_map":{"message":"地图"}
+,"com_typename_music":{"message":"音乐"}
+,"com_typename_news":{"message":"新闻"}
 ,"com_moresearch":{"message":"更多"}
 ,"com_close":{"message":"关闭"}
 
@@ -153,10 +154,10 @@
 ,"op_mtip_borderline":{"message":"适当运用边框衬托可以使搜索条更加美观"}
 ,"op_mtip_form_url":{"message":"文本关键词请用%s转义代替，右键图片地址请用%p转义代替"}
 ,"op_mtip_form_tf":{"message":"像Google一样的某些的搜索引擎，在网页、图片等不同的搜索类别，使用了相同的域名如www.google.com，他们在用URL参数来区分不同的搜索类别，这种情况下需要填写识别语，如&tbm=isch, &tbm=web等等"}
-,"op_mtip_form_prkw":{"message":"关键词标识顾名思义是指：%s左边那部分的参数名字，如q=；如果选择【使用目录作为关键词】，则此处应填写正则表达式"}
+,"op_mtip_form_prkw":{"message":"关键词标识顾名思义是指：%s左边那部分的参数名字，如q=；如果选择【使用目录作为关键词】，则此处应填写正则表达式，可参考视频中的抖音搜索"}
 ,"op_mtip_form_enc":{"message":"仅用于某些不支持utf8编码的搜索引擎，你可以依次点击：【自定义设置菜单】>【工具】>【编码】查看搜索引擎使用的编码"}
-,"op_mtip_form_googleico":{"message":"Google提供了一个在线的网站图标服务，如果你找不到搜索引擎的图标，可以使用这个服务，勾选此处会自动填写图标定义为：https://www.google.com/s2\n/favicons?domain=域名"}
-,"op_mtip_form_pathkw":{"message":"这是一个为兼容极少数搜索引擎的特殊选项，因为这些搜索引擎并没有使用标准的URL参数传递关键词，而是采用了action的请求方式，如苏宁易购：https://search.suning.com/关键词/；勾选此外还应注意【关键词标识】的定义方法"}
+,"op_mtip_form_googleico":{"message":"Google提供了一个在线的网站图标服务，如果你找不到搜索引擎的图标，可以使用这个服务，勾选此处会自动填写图标定义为：https://www.google.com/s2\n/favicons?domain=域名，注意使用该选项时你的本机必须能访问Google图标服务"}
+,"op_mtip_form_pathkw":{"message":"这是一个为兼容少数搜索引擎的特殊选项，因为这些搜索引擎并没有使用标准的URL参数传递关键词，而是采用了action的请求方式，如抖音：https://www.douyin.com/search/关键词；勾选此处还应注意【关键词标识】的定义方法"}
 
 ,"oth_readme":{"message":"关于我"}
 ,"oth_readme1":{"message":"search2的设计遵循四个原则，它们是：轻快、极简、易用、可扩展"}
@@ -166,8 +167,8 @@
 ,"oth_readme5":{"message":"search2需要Chrome核心版本大于21才能正常使用, 从v2.0.0版本开始支持manifest v3"}
 ,"oth_readme6":{"message":"过去心不可得，现在心不可得，未来心不可得"}
 ,"oth_ipr1":{"message":"版权声明：search2的图标"}
-,"oth_ipr2":{"message":"和"}
-,"oth_ipr3":{"message":"源代码产权归作者(wurenny@gmail.com)所有，任何个人或组织不可对其盗用、修改、发布，包括但不限于Chrome扩展市场或其它浏览器插件市场，作者保留追究其法律责任的权利"}
+,"oth_ipr2":{"message":""}
+,"oth_ipr3":{"message":"和源代码产权归作者(wurenny@gmail.com)所有，任何个人或组织不可对其盗用、修改、发布，包括但不限于Chrome扩展市场或其它浏览器插件市场，作者保留追究其法律责任的权利"}
 ,"oth_reset_confirm":{"message":"你正在恢复默认配置，这将丢失你当前的所有配置，确定要重置？"}
 ,"oth_tab_untitled":{"message":"未命名"}
 ,"oth_tab_rm_confirm":{"message":"确定要移除这个搜索类别，包括这个类别下的所有搜索引擎项吗？"}
